@@ -1,7 +1,7 @@
 #!/bin/sh
 # WARNING: This file was auto-generated. Do not edit!
 #
-# $Id: svctool.in,v 2.561 2021-06-10 10:56:29+05:30 Cprogrammer Exp mbhangui $
+# $Id: svctool.in,v 2.562 2021-06-10 20:06:17+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -28,7 +28,7 @@ host=@HOST@
 shared_objects=0
 use_dlmopen=0
 skip_sendmail_check=0
-RCSID="# \$Id: svctool.in,v 2.561 2021-06-10 10:56:29+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: svctool.in,v 2.562 2021-06-10 20:06:17+05:30 Cprogrammer Exp mbhangui $"
 
 if [ -d /run/mysqld ] ; then
 	mysqlSocket=/run/mysqld/mysqld.sock
@@ -2464,10 +2464,14 @@ case "$dkverify_option" in
 	echo FGHIKLMNOQRTUVWjp > $conf_dir/DKIMVERIFY
 	> $conf_dir/UNSIGNED_SUBJECT
 	> $conf_dir/UNSIGNED_FROM
-	echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/QMAILQUEUE
+	if [ -n  "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter"  > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/SPAMQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/QMAILQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKIMQUEUE
 	fi
 	;;
 	dkim)
@@ -2475,28 +2479,40 @@ case "$dkverify_option" in
 	echo > $conf_dir/DKIMVERIFY
 	echo > $conf_dir/UNSIGNED_SUBJECT
 	> $conf_dir/UNSIGNED_FROM
-	echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/QMAILQUEUE
+	if [ -n  "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter"  > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/SPAMQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/QMAILQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKIMQUEUE
 	fi
 	;;
 	dkstrict)
 	echo BDEGIJKfh > $conf_dir/DKVERIFY
 	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKVERIFY $conf_dir/DKIMVERIFY $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
-	echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+	if [ -n  "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter"  > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/SPAMQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKQUEUE
 	fi
 	;;
 	dk)
 	echo > $conf_dir/DKVERIFY
 	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKVERIFY $conf_dir/DKIMVERIFY $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
-	echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+	if [ -n  "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter"  > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/SPAMQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKQUEUE
 	fi
 	;;
 	bothstrict)
@@ -2505,11 +2521,16 @@ case "$dkverify_option" in
 	echo BDEGIJKfh > $conf_dir/DKVERIFY
 	> $conf_dir/UNSIGNED_SUBJECT
 	> $conf_dir/UNSIGNED_FROM
-	echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
-	echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	if [ -n  "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter"  > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dk"   > $conf_dir/SPAMQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKIMQUEUE
 	fi
 	;;
 	both)
@@ -2518,11 +2539,16 @@ case "$dkverify_option" in
 	echo > $conf_dir/DKVERIFY
 	echo > $conf_dir/UNSIGNED_SUBJECT
 	> $conf_dir/UNSIGNED_FROM
-	echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
-	echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	if [ -n  "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter"  > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dk"   > $conf_dir/SPAMQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKIMQUEUE
 	fi
 	;;
 	none|*)
@@ -2530,8 +2556,15 @@ case "$dkverify_option" in
 	if [ $no_multi -eq 1 ] ; then
 		> $conf_dir/QMAILQUEUE
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
+		if [ -n  "$spamfilter" ] ; then
+			echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		fi
 	else
-		echo "$QmailBinPrefix/sbin/qmail-multi" > $conf_dir/QMAILQUEUE
+		if [ -n  "$spamfilter" ] ; then
+			echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		else
+			echo "$QmailBinPrefix/sbin/qmail-multi" > $conf_dir/QMAILQUEUE
+		fi
 		> $conf_dir/QUEUEDIR
 	fi
 	;;
@@ -2731,42 +2764,63 @@ fi
 /bin/rm -f $conf_dir/QUEUEDIR
 case "$dksign_option" in
 	dkim)
-	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
+	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKVERIFY $conf_dir/DKIMVERIFY $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
 	echo "$private_key" > $conf_dir/DKIMSIGN
-	echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/QMAILQUEUE
+	if [ -n "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/SPAMQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/QMAILQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKIMQUEUE
 	fi
 	;;
 	dk)
-	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
+	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKVERIFY $conf_dir/DKIMVERIFY $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
 	echo "$private_key" > $conf_dir/DKSIGN
-	echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+	if [ -n "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/SPAMQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKQUEUE
 	fi
 	;;
 	both)
-	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
+	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKVERIFY $conf_dir/DKIMVERIFY $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
 	echo "$private_key" > $conf_dir/DKSIGN
 	echo "$private_key" > $conf_dir/DKIMSIGN
-	echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
-	echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	if [ -n "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/SPAMQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKIMQUEUE
 	fi
 	;;
 	none|*)
-	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
+	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKVERIFY $conf_dir/DKIMVERIFY $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
 	if [ $no_multi -eq 1 ] ; then
-		> $conf_dir/QMAILQUEUE
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
+		if [ -n "$spamfilter" ] ; then
+			echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		else
+			> $conf_dir/QMAILQUEUE
+		fi
 	else
-		echo "$QmailBinPrefix/sbin/qmail-multi" > $conf_dir/QMAILQUEUE
 		> $conf_dir/QUEUEDIR
+		if [ -n "$spamfilter" ] ; then
+			echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		else
+			echo "$QmailBinPrefix/sbin/qmail-multi" > $conf_dir/QMAILQUEUE
+		fi
 	fi
 	;;
 esac
@@ -2863,10 +2917,14 @@ case "$dkverify_option" in
 	echo FGHIKLMNOQRTUVWjp > $conf_dir/DKIMVERIFY
 	> $conf_dir/UNSIGNED_SUBJECT
 	> $conf_dir/UNSIGNED_FROM
-	echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/QMAILQUEUE
+	if [ -n "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/SPAMQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/QMAILQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKIMQUEUE
 	fi
 	;;
 	dkim)
@@ -2874,41 +2932,58 @@ case "$dkverify_option" in
 	echo > $conf_dir/UNSIGNED_SUBJECT
 	> $conf_dir/UNSIGNED_FROM
 	echo > $conf_dir/DKIMVERIFY
-	echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/QMAILQUEUE
+	if [ -n "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/SPAMQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/QMAILQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKIMQUEUE
 	fi
 	;;
 	dkstrict)
 	echo BDEGIJKfh > $conf_dir/DKVERIFY
 	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKVERIFY $conf_dir/DKIMVERIFY $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
-	echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+	if [ -n "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/SPAMQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKQUEUE
 	fi
 	;;
 	dk)
 	echo > $conf_dir/DKVERIFY
 	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKVERIFY $conf_dir/DKIMVERIFY $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
-	echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+	if [ -n "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/SPAMQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKQUEUE
 	fi
 	;;
 	bothstrict)
 	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKVERIFY $conf_dir/DKIMVERIFY $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
 	echo FGHIKLMNOQRTUVWjp > $conf_dir/DKIMVERIFY
 	echo BDEGIJKfh > $conf_dir/DKVERIFY
-	echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
-	echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	if [ -n "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/SPAMQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	fi
 	> $conf_dir/UNSIGNED_SUBJECT
 	> $conf_dir/UNSIGNED_FROM
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKIMQUEUE
 	fi
 	;;
 	both)
@@ -2917,21 +2992,34 @@ case "$dkverify_option" in
 	echo > $conf_dir/DKVERIFY
 	echo > $conf_dir/UNSIGNED_SUBJECT
 	> $conf_dir/UNSIGNED_FROM
-	echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
-	echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	if [ -n "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/SPAMQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKIMQUEUE
 	fi
 	;;
 	none|*)
 	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKVERIFY $conf_dir/DKIMVERIFY $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
 	if [ $no_multi -eq 1 ] ; then
-		> $conf_dir/QMAILQUEUE
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
+		if [ -n  "$spamfilter" ] ; then
+			echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		else
+			> $conf_dir/QMAILQUEUE
+		fi
 	else
-		echo "$QmailBinPrefix/sbin/qmail-multi" > $conf_dir/QMAILQUEUE
 		> $conf_dir/QUEUEDIR
+		if [ -n "$spamfilter" ] ; then
+			echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		else
+			echo "$QmailBinPrefix/sbin/qmail-multi" > $conf_dir/QMAILQUEUE
+		fi
 	fi
 	;;
 esac
@@ -5604,10 +5692,14 @@ case "$dkverify_option" in
 	echo FGHIKLMNOQRTUVWjp > $conf_dir/DKIMVERIFY
 	> $conf_dir/UNSIGNED_SUBJECT
 	> $conf_dir/UNSIGNED_FROM
-	echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/QMAILQUEUE
+	if [ -n "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/SPAMQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/QMAILQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKIMQUEUE
 	fi
 	;;
 	dkim)
@@ -5615,28 +5707,40 @@ case "$dkverify_option" in
 	echo > $conf_dir/DKIMVERIFY
 	echo > $conf_dir/UNSIGNED_SUBJECT
 	> $conf_dir/UNSIGNED_FROM
-	echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/QMAILQUEUE
+	if [ -n "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/SPAMQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/QMAILQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKIMQUEUE
 	fi
 	;;
 	dkstrict)
 	echo BDEGIJKfh > $conf_dir/DKVERIFY
 	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKVERIFY $conf_dir/DKIMVERIFY $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
-	echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+	if [ -n "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/SPAMQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKQUEUE
 	fi
 	;;
 	dk)
 	echo > $conf_dir/DKVERIFY
 	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKVERIFY $conf_dir/DKIMVERIFY $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
-	echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+	if [ -n "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/SPAMQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKQUEUE
 	fi
 	;;
 	bothstrict)
@@ -5645,11 +5749,16 @@ case "$dkverify_option" in
 	echo BDEGIJKfh > $conf_dir/DKVERIFY
 	> $conf_dir/UNSIGNED_SUBJECT
 	> $conf_dir/UNSIGNED_FROM
-	echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
-	echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	if [ -n "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/SPAMQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKIMQUEUE
 	fi
 	;;
 	both)
@@ -5658,21 +5767,34 @@ case "$dkverify_option" in
 	echo > $conf_dir/DKVERIFY
 	echo > $conf_dir/UNSIGNED_SUBJECT
 	> $conf_dir/UNSIGNED_FROM
-	echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
-	echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	if [ -n "$spamfilter" ] ; then
+		echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/SPAMQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	else
+		echo "$QmailBinPrefix/sbin/qmail-dk" > $conf_dir/QMAILQUEUE
+		echo "$QmailBinPrefix/sbin/qmail-dkim" > $conf_dir/DKQUEUE
+	fi
 	if [ $no_multi -eq 1 ] ; then
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
-		echo "$QmailBinPrefix/sbin/qmail-queue" > $conf_dir/DKIMQUEUE
 	fi
 	;;
 	none|*)
 	/bin/rm -f $conf_dir/DKSIGN $conf_dir/DKIMSIGN $conf_dir/DKVERIFY $conf_dir/DKIMVERIFY $conf_dir/DKQUEUE $conf_dir/DKIMQUEUE
 	if [ $no_multi -eq 1 ] ; then
-		> $conf_dir/QMAILQUEUE
 		echo "$QUEUE_BASE"/queue1 > $conf_dir/QUEUEDIR
+		if [ -n "$spamfilter" ] ; then
+			echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		else
+			> $conf_dir/QMAILQUEUE
+		fi
 	else
-		echo "$QmailBinPrefix/sbin/qmail-multi" > $conf_dir/QMAILQUEUE
 		> $conf_dir/QUEUEDIR
+		if [ -n "$spamfilter" ] ; then
+			echo "$QmailBinPrefix/sbin/qmail-spamfilter" > $conf_dir/QMAILQUEUE
+		else
+			echo "$QmailBinPrefix/sbin/qmail-multi" > $conf_dir/QMAILQUEUE
+		fi
 	fi
 	;;
 esac
