@@ -122,6 +122,7 @@ Release 2.13 Start 14/02/2021
 74. fixed uninitialized variables in do_test()
 75. fixed compiler warning for containsutf8()
 76. moved makeargs.c, mktempfile.c to libqmail
+77. svctool: replace qmail-multi with qmail-spamfilter for spam filter
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 2.12 Start 21/05/2020
